<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_report_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
        android:id="@+id/text_report_title"
        android:text="@string/report_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        android:layout_marginTop="32dp"
    />

    <Spinner
        android:id="@+id/spinner_report_types"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/text_report_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
    />

    <EditText
        android:id="@+id/text_report_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report_description"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@+id/spinner_report_types"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
    />

    <Button
        android:id="@+id/button_low"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_low"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_mid"
        app:layout_constraintTop_toBottomOf="@+id/text_report_description"
    />

    <Button
        android:id="@+id/button_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_mid"
        app:layout_constraintBottom_toBottomOf="@+id/button_low"
        app:layout_constraintStart_toEndOf="@+id/button_low"
        app:layout_constraintEnd_toEndOf="@+id/button_high"
        app:layout_constraintTop_toTopOf="@+id/button_high"
    />

    <Button
        android:id="@+id/button_high"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_high"

        app:layout_constraintBottom_toBottomOf="@+id/button_mid"
        app:layout_constraintStart_toEndOf="@+id/button_mid"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_submit"
        app:layout_constraintTop_toBottomOf="@+id/button_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
    />



</androidx.constraintlayout.widget.ConstraintLayout>